# Ali-Haider-AI-Assistant

./: .gitignore  .vercelignore  README.md  api.py  build.sh  config.py  document_loader.py  embeddings.py  fetch_web_data.py  initialize_assistant.py  llm.py  main.py  personal_info.py  prompt_templates.py  pyproject.toml  rag_graph.py  requirements.txt  run_api.py  vector_store.py  vercel-build.sh  vercel.json  voice.py  web_retriever.py
data/: ali_haider_additional_info.md  ali_haider_linkedin.txt  ali_haider_profile.txt  frellectraai_studio_website.txt
static/: index.html
